# implicit_coordination

./: CMakeLists.txt  README.md  package.xml
data/test/: C.txt  M.txt  adj.txt  start.txt
include/: AbstractPlanner.h  ImplicitCoordinationPlanner.h  MESPPProblem.h  State.h
log/test/: paths.txt  solver_data.txt
src/: AbstractPlanner.cpp  ImplicitCoordinationPlanner.cpp  MESPPProblem.cpp  State.cpp  implicit_coordination_main.cpp
